syntax = "proto3";

package sensors;

option go_package = ".;sensors";

service SensorService {

  rpc CreateSensor(Sensor) returns (Sensor) {} 
  
  rpc ReadSensors(Sensor) returns (Sensors) {}

  rpc UpdateSensors(SensorUpdate) returns (Sensors) {}

  rpc DeleteSensors(Sensor) returns (Sensors) {}
}

// Sensor update query needs differentiate how sensors to
// update are selected vs. what fields are updated
// TODO need boolean for whether to update annotations or
// replace?
message SensorUpdate {
  Sensor selector = 1;
  Sensor update = 2;
}

// Sensor metadata
message Sensor {
  // uuid / collection not required to re-use as query type
  string uuid = 1;
  string collection = 2;
  string name = 3;
  string unit = 4;
  string ingress = 5;
  repeated Annotation annotations = 16;
}

message Annotation {
  string key = 1;
  string value = 2;
}

message Sensors {
  int32 count = 1;
  repeated Sensor sensors = 2;
}
